<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimary">

        <com.indiacovid19.trackingapp.views.ArchiaBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/disclaimer"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.indiacovid19.trackingapp.views.ArchiaBoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/disclaimer_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textAlignment="center" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:layout_marginTop="15dp"
            android:id="@+id/state_spinner"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingVertical="15dp">

            <Button
                android:id="@+id/decline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@drawable/red_button_background"
                android:fontFamily="@font/archia_semibold"
                android:text="@string/decline"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/accept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@drawable/green_button_background"
                android:fontFamily="@font/archia_semibold"
                android:text="@string/accept"
                android:textColor="@color/white" />


        </LinearLayout>

    </LinearLayout>
</LinearLayout>