<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <RelativeLayout
        android:id="@+id/info_back_btn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:rotation="180"
            android:src="@drawable/ic_back" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp">

        <com.indiacovid19.trackingapp.views.ArchiaBoldTextView
            android:id="@+id/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/useful_info"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:textAllCaps="true" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/info_text"
            android:layout_marginTop="10dp"
            android:scrollbars="none">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">


                <RelativeLayout
                    android:id="@+id/myth_buster_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">

                    <com.indiacovid19.trackingapp.views.ArchiaBoldTextView
                        android:id="@+id/myth_buster_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/myth_busters"
                        android:textAllCaps="true"
                        android:textColor="@color/ssg_green_text_color"
                        android:textSize="24sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/myth_buster_tv"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginBottom="15dp">
                        <com.indiacovid19.trackingapp.views.ArchiaLightTextView
                            android:id="@+id/myth_buster_error"
                            android:visibility="gone"
                            android:layout_centerInParent="true"
                            android:text="@string/no_permission_given"
                            android:textColor="@color/redLight"
                            android:textSize="14sp"
                            android:paddingHorizontal="30dp"
                            android:textAlignment="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <androidx.viewpager.widget.ViewPager
                            android:id="@+id/myth_buster_viewPager"
                            android:layout_width="match_parent"
                            android:layout_height="368px" />

                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/about_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/myth_buster_layout">

                    <com.indiacovid19.trackingapp.views.ArchiaBoldTextView
                        android:id="@+id/about_title_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about"
                        android:textColor="@color/ssg_cyan_text_color"
                        android:textSize="24sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/about_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/about_title_tv"
                        android:layout_marginHorizontal="10dp"
                        android:scrollbars="none" />

                </RelativeLayout>


            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>